err/suchyta-utils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/suchyta_utils'...
Compiling './lib/python3.5/site-packages/suchyta_utils/_jkfunctions.py'...
***   File "./lib/python3.5/site-packages/suchyta_utils/_jkfunctions.py", line 128
    print 'JK %i' %(j)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/suchyta_utils/balrog.py'...
***   File "./lib/python3.5/site-packages/suchyta_utils/balrog.py", line 537
    print 'WARNING: the %s file does not exist for your given directory, subset, and version: %s'%(key, self.__dict__[fkey])
                                                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/suchyta_utils/db.py'...
***   File "./lib/python3.5/site-packages/suchyta_utils/db.py", line 84
    print table
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/suchyta_utils-0.1.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
